--- a/SimchaFund.Web/Views/Contributors/Index.cshtml
+++ b/SimchaFund.Web/Views/Contributors/Index.cshtml
@@ -20,7 +20,11 @@
         <div class="row">
             <div class="col-md-2">
                 <button class="btn btn-danger" id="new-contributor">New Contributor</button>
-            </div>           
+            </div>
+            <div class="col-md-6">
+                <input type="text" class="form-control-sm" placeholder="Search" id="search" />
+                <button class="btn btn-danger" id="clear">Clear</button>
+            </div>
             <div class="col-md-4">
                 <h3>Total: @Model.Total.ToString("C")</h3>
             </div>
